--- a/colaboraciones o patrocinios.html
+++ b/colaboraciones o patrocinios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colaboraciones o patrocinios</title>
-    <link rel="stylesheet" href="css/hoja de estilo 1.css"/>
+    <link rel="stylesheet" href="hoja de estilo 1.css"/>
 </head>
 <body>
     <h1>Colaboraciones O Patrocinios</h1>
