--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio </title>
-    <link rel="stylesheet" href="css/hoja de estilo 1.css"/>
+    <link rel="stylesheet" href="hoja de estilo 1.css"/>
 </head>
 <body>
     <h1>Pagina Emmanuel</h1>
