--- a/mis redes sociales.html
+++ b/mis redes sociales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mis redes sociales</title>
-    <link rel="stylesheet" href="css/hoja de estilo 1.css"/>
+    <link rel="stylesheet" href="paleta1.css"/>
 </head>
 <body>
 
@@ -28,5 +28,23 @@
         |
     <a href="otro.html">otro</a>
     <hr/>
+>
+<a href="https://www.youtube.com/@Geometridashers">Mi canal primario</a>
+<br/>
+>
+<a href="https://www.youtube.com/@superdibujos-i9e">Mi canal de yooutube secundario</a>
+<br/>> 
+<a href="https://www.instagram.com/emanuel16654284/">Mi instagram</a>
+    <br/>>
+<a href="https://x.com/Emmanuelva55910">Mi Twiter o X</a>
+<br/>>
+<a href="https://github.com/Emmanuel123456789101112">mi github</a>
+
+
+
+
+
+
+
 </body>
 </html>
