este es un mbo menor
en las pestanas en las que puedes contactarme cambie el boton de mi gmail contactame y puse la direccio de mi nuevo canal de youtube

--- a/mis redes sociales.html
+++ b/mis redes sociales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mis redes sociales</title>
-    <link rel="stylesheet" href="css/hoja de estilo 1.css"/>
+    <link rel="stylesheet" href="paleta1.css"/>
 </head>
 <body>
 
@@ -28,5 +28,24 @@
         |
     <a href="otro.html">otro</a>
     <hr/>
+<br/>>
+<a href="https://www.youtube.com/@Geometridashers" target="_blank">Mi canal primario</a>
+<br/>>
+<a href="https://www.youtube.com/channel/UChH_vhQflno4DIMCqKpqyPA" target="_blank">Mi canal de yooutube secundario</a>
+<br/>> 
+<a href="https://www.instagram.com/emanuel16654284/" target="_blank">Mi instagram</a>
+<br/>>
+<a href="https://x.com/Emmanuelva55910" target="_blank">Mi Twiter o X</a>
+<br/>>
+<a href="https://github.com/Emmanuel123456789101112" target="_blank">mi github</a>
+<br/>>
+  <a href="https://docs.google.com/document/d/1x0hopMO16TuiJwYOBBZ1HiiJhqDuLPZ7BCic2vorJws/edit?usp=drive_link" target="_blank">Mi Gmail</a>
+
+
+
+
+
+
+
 </body>
 </html>
